fix: update fesql common version

--- a/src/sdk/java/sql-jmh/pom.xml
+++ b/src/sdk/java/sql-jmh/pom.xml
@@ -150,7 +150,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
 			</plugin>
-            <plugin>
+            <!--plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.0</version>
@@ -171,7 +171,7 @@
 						</configuration>
 					</execution>
 				</executions>
-            </plugin>
+            </plugin-->
 		</plugins>
 	</build>
 </project>
