--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -173,6 +173,7 @@ java_ut:
         - java/target/failsafe-reports/TEST-*.xml
   dependencies:
     - build
+  when: manual
 
 fesql_auto_test_level_0:
   stage: quick
@@ -201,6 +202,7 @@ fesql_auto_test_level_0:
       - $ENV_BUILD == "daily"
   dependencies:
     - build
+  when: manual
 
 fesql_sdk_c++_level_0:
   stage: quick
@@ -219,6 +221,7 @@ fesql_sdk_c++_level_0:
   except:
     variables:
       - $ENV_BUILD == "daily"
+  when: manual
 
 fesql_auto_test_level_1+:
   stage: manual
@@ -348,6 +351,7 @@ c++_ut:
   except:
     variables:
       - $ENV_BUILD == "daily"
+  when: manual
 
 py3_ut:
   stage: quick
@@ -367,6 +371,7 @@ py3_ut:
   except:
     variables:
       - $ENV_BUILD == "daily"
+  when: manual
 
 fesql_auto_test_python:
   stage: manual
@@ -450,6 +455,7 @@ tablet_multi_demension:
   except:
     variables:
       - $ENV_BUILD == "daily"
+  when: manual
 
 ns_one_demension:
   stage: manual
@@ -492,6 +498,7 @@ ns_multi_demension:
   except:
     variables:
       - $ENV_BUILD == "daily"
+  when: manual
 
 disk_table:
   stage: manual
