--- a/cases/integration/v1/test_insert.yaml
+++ b/cases/integration/v1/test_insert.yaml
@@ -157,24 +157,25 @@ cases:
     sql: select * from {0};
     expect:
       columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+      order: c2
       rows:
         - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
-        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",2,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",3,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",4,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",5,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",6,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",7,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",8,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",9,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",10,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",11,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",12,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",13,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",14,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",15,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",16,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",17,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",18,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",19,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",20,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
