--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -1,5 +1,4 @@
 db: test_zw
-debugs: []
 cases:
   - id: 0
     desc: lastjoin+窗口
@@ -65,7 +64,7 @@ cases:
     dataProvider:
       - ["ROWS","ROWS_RANGE"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c4,
+      select {0}.id,{0}.c1,{0}.c3,{1}.c4,
       sum({1}.c4) OVER w1 as w1_c4_sum,
       count({1}.c4) OVER w1 as w1_c4_count
       from {0}
@@ -213,8 +212,7 @@ cases:
         - [4,"bb",23,34,34]
         - [5,"bb",24,34,68]
   - id: 5
-    desc: 两个子查询lastjoin
-    tags: ["TODO","@chenjing by @zhaowei","请求模式下，sdk core,http://jira.4paradigm.com/browse/FEX-1011"]
+    desc: 基于子查询作窗口-功能边界外
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -237,7 +235,7 @@ cases:
     dataProvider:
       - ["ROWS","ROWS_RANGE"]
     sql: |
-      select id,t2.c1,t2.c3,t1.c4,
+      select t1.id,t2.c1,t2.c3,t1.c4,
       sum(t1.c4) OVER w1 as w1_c4_sum
       from (select id,c1,c3,c4,c7 from {0}) as t2
       last join (select c1,c4,c7 from {1}) as t1 ORDER BY t1.c7 on t2.c1=t1.c1
@@ -245,17 +243,10 @@ cases:
       w1 AS (PARTITION BY t2.c1 ORDER BY t2.c7 d[0] BETWEEN 1 PRECEDING AND CURRENT ROW)
       ;
     expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c4 bigint","w1_c4_sum bigint"]
-      rows:
-        - [1,"aa",20,32,32]
-        - [2,"aa",21,32,64]
-        - [3,"aa",22,32,64]
-        - [4,"bb",23,34,34]
-        - [5,"bb",24,34,68]
+      success: false
   - id: 6
     desc: 两个子查询lastjoin-子查询带窗口特征
-    tags: ["TODO","@chenjing by @zhaowei","sql执行失败","http://jira.4paradigm.com/browse/FEX-1005"]
+    tags: ["@baowei", "不支持窗口的窗口,边界外"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -289,14 +280,7 @@ cases:
       w1 AS (PARTITION BY t2.c1 ORDER BY t2.c7 d[0] BETWEEN 1 PRECEDING AND CURRENT ROW)
       ;
     expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c4 bigint","w1_c4_sum bigint"]
-      rows:
-        - [1,"aa",20,32,32,20,63]
-        - [2,"aa",21,32,64,61,126]
-        - [3,"aa",22,32,64,84,126]
-        - [4,"bb",23,34,34,23,67]
-        - [5,"bb",24,34,68,70,134]
+      success: false
   - id: 7
     desc: lastjoin-ts-null
     inputs:
@@ -390,7 +374,7 @@ cases:
   - id: 9
     desc: lastjoin三张表-5个window
     mode: rtidb-batch-unsupport
-    tags: ["TODO","@chenjing by @zhaowei","请求模式下，sdk core,http://jira.4paradigm.com/browse/FEX-1007"]
+    tags: ["边界外", "@zhaowei", "后面需要支持多张表lastjoin后作window"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -446,14 +430,15 @@ cases:
       w4 AS (PARTITION BY {0}.c1 ORDER BY {3}.c7 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW),
       w5 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","w1_c4_sum bigint","w2_c4_sum bigint","w3_c4_sum bigint","w4_c4_sum bigint","w5_c4_count bigint"]
-      rows:
-        - [1,"aa",20,31,1.1,null,30,32,31,null,0]
-        - [2,"aa",21,null,1.4,2.2,61,64,62,null,0]
-        - [3,"aa",22,32,null,null,63,64,62,null,0]
-        - [4,"bb",23,33,null,null,33,34,34,31,1]
-        - [5,"bb",24,34,1.5,2.4,67,68,68,62,2]
+      success: false
+#      order: id
+#      columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","w1_c4_sum bigint","w2_c4_sum bigint","w3_c4_sum bigint","w4_c4_sum bigint","w5_c4_count bigint"]
+#      rows:
+#        - [1,"aa",20,31,1.1,null,30,32,31,null,0]
+#        - [2,"aa",21,null,1.4,2.2,61,64,62,null,0]
+#        - [3,"aa",22,32,null,null,63,64,62,null,0]
+#        - [4,"bb",23,33,null,null,33,34,34,31,1]
+#        - [5,"bb",24,34,1.5,2.4,67,68,68,62,2]
   - id: 10
     desc: t1 join t2 join t3,t2的key产出为null
     inputs:
@@ -468,7 +453,7 @@ cases:
           - [5,"ee",24,34,1.5,2.5,1590738994000,"2020-05-05"]
       -
         columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
           - [2,"aa",21,31,1.1,2.1,1606755720000,"2020-05-01"]
@@ -477,7 +462,7 @@ cases:
           - [5,"ee",24,34,1.2,2.2,1606755660000,"2020-05-02"]
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
           - [2,"bb",20,31,1.2,2.1,1606759200000,"2020-05-01"]
@@ -501,6 +486,8 @@ cases:
         - [5,"ee",24,24,null]
   - id: 11
     desc: (t1 join t2) join t3
+    mode: batch-request-unsupport
+    tags: ["batch-request-unsupport", "batch request公共列设置为偶数列时候生成的物理计划有问题 --gtest_filter=EngineTestLastJoin/EngineTest.test_cluster_batch_request_engine/*"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -513,7 +500,7 @@ cases:
           - [5,"ee",24,34,1.5,2.5,1590738994000,"2020-05-05"]
       -
         columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
           - [2,"aa",21,31,1.1,2.1,1606755720000,"2020-05-01"]
@@ -522,7 +509,57 @@ cases:
           - [5,"ee",24,34,1.2,2.2,1606755660000,"2020-05-02"]
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
+          - [2,"bb",20,31,1.2,2.1,1606759200000,"2020-05-01"]
+          - [3,"bb",null,32,1.3,2.1,1606762800000,"2020-05-01"]
+          - [4,"bb",21,33,1.4,2.1,1606766400000,"2020-05-01"]
+          - [5,"ee",21,34,1.5,2.2,1606766401000,"2020-05-02"]
+    # @baoxinqi, select id,{0}.c1,{1}.c3 from {0} last join {1} 这个地方理论上应该有column resolved error, 不知道要哪一个id
+    sql: |
+      select
+      id,t1.c1,t1.c3,{2}.c4
+      from (
+      select {0}.id,{0}.c1,{1}.c3
+      from {0}
+      last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
+      ) as t1 last join {2} ORDER BY {2}.c7 on t1.c3={2}.c3
+      ;
+    expect:
+      order: id
+      columns: ["id int","c1 string","c3 int","c4 bigint"]
+      rows:
+        - [1,"aa",21,34]
+        - [2,"bb",null,32]
+        - [3,"cc",21,34]
+        - [4,"dd",21,34]
+        - [5,"ee",24,null]
+  - id: 11-2
+    desc: (t1 join t2) join t3 error column resolved
+    tags: ["TODO", "@baoxinqi 重复列没有报错，理论上要计划编译失败"]
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - [3,"cc",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - [4,"dd",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - [5,"ee",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+      -
+        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
+          - [2,"aa",21,31,1.1,2.1,1606755720000,"2020-05-01"]
+          - [3,"cc",21,32,1.1,2.1,1606755780000,"2020-05-01"]
+          - [4,"dd",21,33,1.1,2.1,1606755840000,"2020-05-01"]
+          - [5,"ee",24,34,1.2,2.2,1606755660000,"2020-05-02"]
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
           - [2,"bb",20,31,1.2,2.1,1606759200000,"2020-05-01"]
@@ -539,17 +576,11 @@ cases:
       ) as t1 last join {2} ORDER BY {2}.c7 on t1.c3={2}.c3
       ;
     expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c4 bigint"]
-      rows:
-        - [1,"aa",21,34]
-        - [2,"bb",null,32]
-        - [3,"cc",21,34]
-        - [4,"dd",21,34]
-        - [5,"ee",24,null]
+      success: false
   - id: 12
     desc: t1 join (t2 join t3)
-    tags: ["TODO","@chenjing by @zhaowei","sql执行失败","http://jira.4paradigm.com/browse/FEX-1014"]
+    mode: rtidb-unsupport
+    tags: ["@zhaowei RITDB边界外的能力join的时候主表只有一张","http://jira.4paradigm.com/browse/FEX-1014"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -562,7 +593,7 @@ cases:
           - [5,"ee",24,34,1.5,2.5,1590738994000,"2020-05-05"]
       -
         columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
           - [2,"aa",21,31,1.1,2.1,1606755720000,"2020-05-01"]
@@ -571,7 +602,7 @@ cases:
           - [5,"ee",24,34,1.2,2.2,1606755660000,"2020-05-02"]
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
           - [2,"bb",20,31,1.2,2.1,1606759200000,"2020-05-01"]
@@ -580,7 +611,7 @@ cases:
           - [5,"ee",21,34,1.5,2.2,1606766401000,"2020-05-02"]
     sql: |
       select
-      id,{0}.c1,t1.c3,t1.c4
+      {0}.id,{0}.c1,t1.c3,t1.c4
       from
       {0} last join
       (select {1}.c1,{1}.c3,{1}.c7,{2}.c4 from {1} last join {2} order by {2}.c7 on {1}.c3={2}.c3) as t1
@@ -594,8 +625,9 @@ cases:
         - [3,"cc",21,34]
         - [4,"dd",21,34]
         - [5,"ee",24,null]
-  - id: 13
-    desc: t1 join (t2 join t3)-key和ts不是来自同一个主表
+  - id: 13-1
+    desc: t1 join (t2 join t3)-rtidb功能边界外的查询, join包含两张主表
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -608,7 +640,7 @@ cases:
           - [5,"ee",24,34,1.5,2.5,1590738994000,"2020-05-05"]
       -
         columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
           - [2,"aa",21,31,1.1,2.1,1606755720000,"2020-05-01"]
@@ -617,7 +649,7 @@ cases:
           - [5,"ee",24,34,1.2,2.2,1606755660000,"2020-05-02"]
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7","index1:c3:c7"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
           - [2,"bb",20,31,1.2,2.1,1606759200000,"2020-05-01"]
@@ -626,7 +658,47 @@ cases:
           - [5,"ee",21,34,1.5,2.2,1606766401000,"2020-05-02"]
     sql: |
       select
-      id,{0}.c1,t1.c3,t1.c4
+      {0}.id,{0}.c1,t1.c3,t1.c4
+      from
+      {0} last join
+      (select {1}.c1,{1}.c3,{2}.c7,{2}.c4 from {1} last join {2} order by {2}.c7 on {1}.c3={2}.c3) as t1
+      order by t1.c7 on {0}.c1=t1.c1;
+    expect:
+      success: false
+  - id: 13-2
+    desc: t1 join (t2 join t3)-key和ts不是来自同一个主表
+    tags: ["TODO", "@zhaowei", "case构造不合理，需要构造(t1 join t2) join t3 - key 和 ts不来自同一个主表"]
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - [3,"cc",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - [4,"dd",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - [5,"ee",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+      -
+        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
+          - [2,"aa",21,31,1.1,2.1,1606755720000,"2020-05-01"]
+          - [3,"cc",21,32,1.1,2.1,1606755780000,"2020-05-01"]
+          - [4,"dd",21,33,1.1,2.1,1606755840000,"2020-05-01"]
+          - [5,"ee",24,34,1.2,2.2,1606755660000,"2020-05-02"]
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7","index2:c3:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
+          - [2,"bb",20,31,1.2,2.1,1606759200000,"2020-05-01"]
+          - [3,"bb",null,32,1.3,2.1,1606762800000,"2020-05-01"]
+          - [4,"bb",21,33,1.4,2.1,1606766400000,"2020-05-01"]
+          - [5,"ee",21,34,1.5,2.2,1606766401000,"2020-05-02"]
+    sql: |
+      select
+      {0}.id,{0}.c1,t1.c3,t1.c4
       from
       {0} last join
       (select {1}.c1,{1}.c3,{2}.c7,{2}.c4 from {1} last join {2} order by {2}.c7 on {1}.c3={2}.c3) as t1
@@ -635,6 +707,7 @@ cases:
       success: false
   - id: 14
     desc: lastjoin-重名
+    tags: ["TODO", "@baoxinqi select c3 预期column resolved error"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -655,19 +728,12 @@ cases:
           - [4,"bb",20,33,1.1,2.1,1590738990003,"2020-05-01"]
           - [5,"bb",21,34,1.2,2.2,1590738990004,"2020-05-02"]
     sql: |
-      select id,{0}.c1,c3,c3,{1}.c4
+      select {0}.id,{0}.c1,c3,c3,{1}.c4
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
       ;
     expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c3 int","c4 bigint"]
-      rows:
-        - [1,"aa",20,20,31]
-        - [2,"aa",21,21,31]
-        - [3,"aa",22,22,31]
-        - [4,"bb",23,23,34]
-        - [5,"bb",24,24,34]
+      success: false
   - id: 15
     desc: lastjoin-重名,指定不同的表名
     inputs:
@@ -772,9 +838,35 @@ cases:
       ;
     expect:
       success: false
-  - id: 19
+  - id: 19-1
     desc: 两个子查询lastjoin-子查询带窗口特征-没有使用索引-不带orderby
-    tags: ["TODO","@chenjing by @zhaowei","http://jira.4paradigm.com/browse/FEX-1010"]
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"aa",21,31,1.2,2.2,1590738990001,"2020-05-01"]
+          - [3,"aa",22,32,1.3,2.3,1590738990002,"2020-05-01"]
+          - [4,"bb",23,33,1.4,2.4,1590738990003,"2020-05-02"]
+          - [5,"bb",24,34,1.5,2.5,1590738990004,"2020-05-02"]
+    sql: |
+      select id,t2.c1,t2.c3,t1.c4, t2.w2_c3_sum, t1.w3_c4_sum
+      from (select id,c1,c3,c4,c7,c8,sum({0}.c3) OVER w2 as w2_c3_sum from {0} WINDOW w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW)) as t2
+      last join (select c1,c4,c7,c8,sum({0}.c4) OVER w3 as w3_c4_sum from {0}  WINDOW w3 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 1 PRECEDING AND CURRENT ROW)) as t1
+      on t2.c8=t1.c8
+      ;
+    expect:
+      order: id
+      columns: ["id int","c1 string","c3 int","c4 bigint", "w2_c3_sum int", "w3_c4_sum bigint"]
+      rows:
+        - [1,"aa",20,30, 20, 30]
+        - [2,"aa",21,31, 41, 61]
+        - [3,"aa",22,32, 63, 63]
+        - [4,"bb",23,33, 23, 33]
+        - [5,"bb",24,34, 47, 67]
+  - id: 19-2
+    desc: 两个子查询lastjoin-子查询带窗口特征主表不同-边界外
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -801,14 +893,7 @@ cases:
       on t2.c8=t1.c8
       ;
     expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c4 bigint"]
-      rows:
-        - [1,"aa",20,32,32,20]
-        - [2,"aa",21,32,64,61]
-        - [3,"aa",22,32,64,84]
-        - [4,"bb",23,34,34,23]
-        - [5,"bb",24,34,68,70]
+      success: false
   - id: 20
     desc: 两个子查询lastjoin-子查询带窗口特征-没有使用索引-带orderby
     inputs:
