fix: Fix min/max on empty window

--- a/cases/integration/v1/function/test_calculate.yaml
+++ b/cases/integration/v1/function/test_calculate.yaml
@@ -75,8 +75,8 @@ cases:
         cos(1) as r0,
         cot(2) as r1,
         sin(1.1) as r2,
-        tan(true) as r3,
-        acos(false) as r4,
+        tan(1) as r3,
+        acos(0) as r4,
         asin(2.0) as r5,
         atan(2.2) as r6,
         atan2(1, 2) as r7,
