--- a/cases/integration/fz_ddl/test_myhug.yaml
+++ b/cases/integration/fz_ddl/test_myhug.yaml
@@ -148,7 +148,7 @@ cases:
        1.000000, 2.000000, 3.000000, 4.000000,
        33.000000, 1.000000, 2.000000, 404.000000, 3.000000,
        101, 101, 11, 11, 101, 101, 101, 101, 101, 101, 101,
-       reqId1, 1.1, reqId1, -inf, nan ]
+       reqId1, 1.1, reqId1, NULL, nan ]
     - [ reqId2, reqId2, 1609894068191, uUserId2, zUserId2, uSex2, zSex2, zChannel2, uPlayGame2, uHasJoinedGroup2,
        1.000000, 2.000000, 3.000000, 4.000000,
        33.000000, 1.000000, 2.000000, 404.000000, 3.000000,
@@ -158,7 +158,7 @@ cases:
         1.000000, 2.000000, 3.000000, 4.000000,
         33.000000, 1.000000, 2.000000, 404.000000, 3.000000,
         NULL, NULL, NULL, NULL, 1, 1, 101, 101, 101, 101, 101,
-        reqId2, NULL, reqId2, -inf, nan ]
+        reqId2, NULL, reqId2, NULL, nan ]
     - [ NULL, NULL, 1609894068191, uUserIdNull, zUserIdNull, uSexNull, zSexNull, zChannelNull, uPlayGameNull, uHasJoinedGroupNull,
         1.000000, 2.000000, 3.000000, 4.000000,
         33.000000, 1.000000, 2.000000, 404.000000, 3.000000,
@@ -244,7 +244,7 @@ cases:
     as out2
     on out0.reqId_1 = out2.reqId_75
     ;
-  tags: ["@baoxinqi, max/min空表处理, avg 空表处理需要对齐feql/mysql"]
+  tags: ["@baoxinqi, avg 空表处理需要对齐feql/mysql"]
   batch_request:
     columns: [
         "reqId string",
@@ -283,8 +283,8 @@ cases:
   expect:
     schema: reqId_1:string, reqId_74:string, action_actionValue_multi_direct_73:double, reqId_75:string, bo_hislabel_fWatchedTimeLen_multi_sum_73:double, bo_hislabel_fWatchedTimeLen_multi_max_74:double, bo_hislabel_fWatchedTimeLen_multi_avg_75:double
     rows:
-      - [ reqId1, reqId1, 1.1, reqId1, 0.0, -inf, nan ] # should be -inf -> NULL, nan -> NULL
+      - [ reqId1, reqId1, 1.1, reqId1, 0.0, NULL, nan ] # should be -inf -> NULL, nan -> NULL
       - [ reqId2, reqId2, NULL, reqId2, 100.0, 1.0, 1.0 ]
-      - [ NULL, NULL, 3.3, NULL, 0.0, -inf, nan]
-      - [ reqId2, reqId2, NULL, reqId2, 0.0, -inf, nan ] # should be -inf -> NULL, nan -> NULL
+      - [ NULL, NULL, 3.3, NULL, 0.0, NULL, nan]
+      - [ reqId2, reqId2, NULL, reqId2, 0.0, NULL, nan ] # should be -inf -> NULL, nan -> NULL
       - [ reqId2, reqId2, NULL, reqId2, 100.0, 1.0, 1.0 ]
