--- a/cases/integration/v1/function/test_udaf_function.yaml
+++ b/cases/integration/v1/function/test_udaf_function.yaml
@@ -2165,3 +2165,54 @@ cases:
         - [3, A, 3, 1590115440000, 15, 3, 0, 0, nan, 6, 3, "1,2,3"]
         - [4, A, 4, 1590115450000, 18, 3, 4, 1, 4.0, 9, 3, "2,3,4"]
         - [5, A, 5, 1590115460000, 21, 3, 9, 2, 4.5, 12, 3, "3,4,5"]
+
+  - id: 21
+    desc: max空窗口
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float",
+                   "c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, max(c2) OVER w1 as m2, max(c3) OVER w1 as m3, max(c4) OVER w1 as m4,
+              max(c5) OVER w1 as m5,max(c6) OVER w1 as m6,max(c7) OVER w1 as m7,
+              max(c8) OVER w1 as m8,max(c9) OVER w1 as m9 
+      FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 4 PRECEDING AND 2 PRECEDING);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float",
+                "m6 double","m7 timestamp","m8 date","m9 string"]
+      rows:
+        - [1,"aa",NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL]
+        - [2,"aa",NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL]
+        - [3,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
+        - [4,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
+
+  - id: 22
+    desc: min空窗口
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, min(c2) OVER w1 as m2,min(c3) OVER w1 as m3,min(c4) OVER w1 as m4,min(c5) OVER w1 as m5,min(c6) OVER w1 as m6,min(c7) OVER w1 as m7,min(c8) OVER w1 as m8,min(c9) OVER w1 as m9 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 4 PRECEDING AND 2 PRECEDING);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string"]
+      rows:
+        - [1,"aa",NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL]
+        - [2,"aa",NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL]
+        - [3,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
+        - [4,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
