--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -244,9 +244,9 @@ cases:
       ;
     expect:
       success: false
-  - id: 6
-    desc: 两个子查询lastjoin-子查询带窗口特征
-    tags: ["@baowei", "不支持窗口的窗口,边界外"]
+  - id: 6-1
+    desc: 两个子查询lastjoin-子查询带窗口特征-rtidb不支持
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -281,8 +281,47 @@ cases:
       ;
     expect:
       success: false
+  - id: 6-2
+    desc: 两个子查询lastjoin-子查询带窗口特征-离线场景
+    mode: rtidb-unsupport
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"aa",21,31,1.2,2.2,1590738990001,"2020-05-02"]
+          - [3,"aa",22,32,1.3,2.3,1590738990002,"2020-05-03"]
+          - [4,"bb",23,33,1.4,2.4,1590738990003,"2020-05-04"]
+          - [5,"bb",24,34,1.5,2.5,1590738990004,"2020-05-05"]
+      -
+        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"aa",21,31,1.1,2.1,1590738990001,"2020-05-01"]
+          - [3,"aa",22,32,1.1,2.1,1590738990002,"2020-05-01"]
+          - [4,"bb",23,33,1.1,2.1,1590738990003,"2020-05-01"]
+          - [5,"bb",24,34,1.2,2.2,1590738990004,"2020-05-02"]
+    dataProvider:
+      - ["ROWS","ROWS_RANGE"]
+    sql: |
+      select id,t2.c1,t2.c3,t1.c4,
+      sum(t1.c4) OVER w1 as w1_c4_sum,
+      sum(t2.w2_c3_sum) OVER w1 as w2_c3_sum,
+      sum(t1.w3_c4_sum) OVER w1 as w3_c4_sum
+      from (select id,c1,c3,c4,c7,sum({0}.c3) OVER w2 as w2_c3_sum from {0} WINDOW w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 1 PRECEDING AND CURRENT ROW)) as t2
+      last join (select c1,c4,c7,sum({1}.c4) OVER w3 as w3_c4_sum from {1}  WINDOW w3 AS (PARTITION BY {1}.c1 ORDER BY {1}.c7 ROWS_RANGE BETWEEN 1 PRECEDING AND CURRENT ROW)) as t1
+      ORDER BY t1.c7 on t2.c1=t1.c1
+      WINDOW
+      w1 AS (PARTITION BY t2.c1 ORDER BY t2.c7 d[0] BETWEEN 1 PRECEDING AND CURRENT ROW)
+      ;
+    expect:
+      success: true
   - id: 7
     desc: lastjoin-ts-null
+    tags: ["@chendihao", "zhaowei", "lastjoin对null的处理现在跟在线无法一致"]
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -371,9 +410,9 @@ cases:
         - [3,"cc",22,32,null,null]
         - [4,"dd",23,33,null,null]
         - [5,"ee",24,34,1.5,2.4]
-  - id: 9
-    desc: lastjoin三张表-5个window
-    mode: rtidb-batch-unsupport
+  - id: 9-1
+    desc: lastjoin三张表-5个window, rtidb模式不支持
+    mode: offline-unsupport
     tags: ["边界外", "@zhaowei", "后面需要支持多张表lastjoin后作window"]
     inputs:
       -
@@ -431,6 +470,66 @@ cases:
       w5 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       success: false
+  - id: 9-2
+    desc: lastjoin三张表-5个window-离线场景支持
+    mode: rtidb-unsupport
+    tags: ["TODO", "@chendihao", "last join 多张表后做window离线支持有问题"]
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - [3,"aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - [4,"bb",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - [5,"bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+      -
+        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
+          - [2,"aa",20,31,1.1,2.1,1606755720000,"2020-05-01"]
+          - [3,"aa",20,32,1.1,2.1,1606755780000,"2020-05-01"]
+          - [4,"bb",20,33,1.1,2.1,1606755840000,"2020-05-01"]
+          - [5,"bb",21,34,1.2,2.2,1606755660000,"2020-05-02"]
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
+          - [2,"aa",20,31,1.2,2.1,1606759200000,"2020-05-01"]
+          - [3,"bb",20,32,1.3,2.1,1606762800000,"2020-05-01"]
+          - [4,"bb",20,33,1.4,2.1,1606766400000,"2020-05-01"]
+          - [5,"bb",21,34,1.5,2.2,1606766400000,"2020-05-02"]
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"bb",20,30,1.1,2.1,1606752000000,"2020-05-01"]
+          - [2,"bb",20,31,1.1,2.2,1606838400000,"2020-05-01"]
+          - [3,"cc",20,32,1.1,2.3,1606924800000,"2020-05-01"]
+          - [4,"ee",20,33,1.1,2.4,1607011200000,"2020-05-01"]
+          - [5,"ee",21,34,1.2,2.5,1606752000000,"2020-05-02"]
+    sql: |
+      select id,{0}.c1,{0}.c3,{1}.c4,{2}.c5,{3}.c6,
+      sum({0}.c4) OVER w1 as w1_c4_sum,
+      sum({1}.c4) OVER w2 as w2_c4_sum,
+      sum({2}.c4) OVER w3 as w3_c4_sum,
+      sum({3}.c4) OVER w4 as w4_c4_sum,
+      count({3}.c4) OVER w5 as w5_c4_count
+      from {0}
+      last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
+      last join {2} ORDER BY {2}.c7 on {0}.c1={2}.c1
+      last join {3} ORDER BY {3}.c7 on {0}.c1={3}.c1
+      WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 1s PRECEDING AND CURRENT ROW),
+      w2 AS (PARTITION BY {0}.c1 ORDER BY {1}.c7 ROWS_RANGE BETWEEN 1m PRECEDING AND CURRENT ROW),
+      w3 AS (PARTITION BY {0}.c1 ORDER BY {2}.c7 ROWS_RANGE BETWEEN 1h PRECEDING AND CURRENT ROW),
+      w4 AS (PARTITION BY {0}.c1 ORDER BY {3}.c7 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW),
+      w5 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      success: true
 #      order: id
 #      columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","w1_c4_sum bigint","w2_c4_sum bigint","w3_c4_sum bigint","w4_c4_sum bigint","w5_c4_count bigint"]
 #      rows:
@@ -441,6 +540,8 @@ cases:
 #        - [5,"bb",24,34,1.5,2.4,67,68,68,62,2]
   - id: 10
     desc: t1 join t2 join t3,t2的key产出为null
+    mode: offline-unsupport
+    tags: ["@chendihao", "这个场景离线的预期不正确，需要迪豪看看"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -486,8 +587,10 @@ cases:
         - [5,"ee",24,24,null]
   - id: 11
     desc: (t1 join t2) join t3
-    mode: batch-request-unsupport
-    tags: ["batch-request-unsupport", "batch request公共列设置为偶数列时候生成的物理计划有问题 --gtest_filter=EngineTestLastJoin/EngineTest.test_cluster_batch_request_engine/*"]
+    mode: batch-request-unsupport, offline-unsupport
+    tags: [ "@chendihao, offline unsupport",
+            "@baoxinqi, batch-request-unsupport",
+           "batch request公共列设置为偶数列时候生成的物理计划有问题 --gtest_filter=EngineTestLastJoin/EngineTest.test_cluster_batch_request_engine/*"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -735,7 +838,9 @@ cases:
     expect:
       success: false
   - id: 15
-    desc: lastjoin-重名,指定不同的表名
+    desc: lastjoin-重名,指定不同的表名-在线场景
+    tags: ["@zhaowei", "离线场景预期不一样,后面和可能需要针对离线在线配置不同预期"]
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -756,7 +861,7 @@ cases:
           - [4,"bb",20,33,1.1,2.1,1590738990003,"2020-05-01"]
           - [5,"bb",21,34,1.2,2.2,1590738990004,"2020-05-02"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c3,{1}.c4
+      select {0}.id,{0}.c1,{0}.c3,{1}.c3,{1}.c4
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
       ;
@@ -769,6 +874,7 @@ cases:
         - [3,"aa",22,20,31]
         - [4,"bb",23,21,34]
         - [5,"bb",24,21,34]
+
   - id: 16
     desc: 两个子查询lastjoin，拼接条件不是主表的索引
     inputs:
@@ -783,7 +889,7 @@ cases:
         rows:
           - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
     sql: |
-      select id,t2.c8,t2.c3,t1.c4
+      select t1.id,t2.c8,t2.c3,t1.c4
       from
       (select id,c1,c3,c4,c7,c8 from {0}) as t2
       last join
@@ -792,8 +898,9 @@ cases:
       ;
     expect:
       success: false
-  - id: 17
-    desc: 两个子查询lastjoin，order不是主表的ts
+  - id: 17-1
+    desc: 两个子查询lastjoin，order不是主表的ts-rtidb不支持
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -815,8 +922,33 @@ cases:
       ;
     expect:
       success: false
-  - id: 18
-    desc: 两个子查询lastjoin，拼接条件不是主表的索引-不带orderby
+  - id: 17-2
+    desc: 两个子查询lastjoin，order不是主表的ts-离线支持
+    mode: rtidb-unsupport
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+      -
+        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+    sql: |
+      select id,t2.c8,t2.c3,t1.c4
+      from
+      (select id,c1,c3,c4,c7,c8 from {0}) as t2
+      last join
+      (select c1,c4,c7,c8 from {1}) as t1
+      ORDER BY t1.c4 on t2.c1=t1.c1
+      ;
+    expect:
+      success: true
+  - id: 18-1
+    desc: 两个子查询lastjoin，拼接条件不是主表的索引-不带orderby-rtidb边界外
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -838,9 +970,34 @@ cases:
       ;
     expect:
       success: false
+  - id: 18-2
+    desc: 两个子查询lastjoin，拼接条件不是主表的索引-不带orderby-离线支持
+    mode: rtidb-unsupport
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+      -
+        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+    sql: |
+      select id,t2.c8,t2.c3,t1.c4
+      from
+      (select id,c1,c3,c4,c7,c8 from {0}) as t2
+      last join
+      (select c1,c4,c7,c8 from {1}) as t1
+      on t2.c8=t1.c8
+      ;
+    expect:
+      success: true
   - id: 19-1
     desc: 两个子查询lastjoin-子查询带窗口特征-没有使用索引-不带orderby
-    mode: rtidb-batch-unsupport
+    mode: rtidb-batch-unsupport,offline-unsupport
+    tags: ["offline-unsupport, @chendihao", "离线结果不对"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -866,37 +1023,9 @@ cases:
         - [3,"aa",22,32, 63, 63]
         - [4,"bb",23,33, 23, 33]
         - [5,"bb",24,34, 47, 67]
-  - id: 19-2
-    desc: 两个子查询lastjoin-子查询带窗口特征主表不同-边界外
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"aa",21,31,1.2,2.2,1590738990001,"2020-05-01"]
-          - [3,"aa",22,32,1.3,2.3,1590738990002,"2020-05-01"]
-          - [4,"bb",23,33,1.4,2.4,1590738990003,"2020-05-02"]
-          - [5,"bb",24,34,1.5,2.5,1590738990004,"2020-05-02"]
-      -
-        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"aa",21,31,1.1,2.1,1590738990001,"2020-05-01"]
-          - [3,"aa",22,32,1.1,2.1,1590738990002,"2020-05-01"]
-          - [4,"bb",23,33,1.1,2.1,1590738990003,"2020-05-02"]
-          - [5,"bb",24,34,1.2,2.2,1590738990004,"2020-05-02"]
-    sql: |
-      select id,t2.c1,t2.c3,t1.c4
-      from (select id,c1,c3,c4,c7,c8,sum({0}.c3) OVER w2 as w2_c3_sum from {0} WINDOW w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 1 PRECEDING AND CURRENT ROW)) as t2
-      last join (select c1,c4,c7,c8,sum({1}.c4) OVER w3 as w3_c4_sum from {1}  WINDOW w3 AS (PARTITION BY {1}.c1 ORDER BY {1}.c7 ROWS_RANGE BETWEEN 1 PRECEDING AND CURRENT ROW)) as t1
-      on t2.c8=t1.c8
-      ;
-    expect:
-      success: false
   - id: 20
-    desc: 两个子查询lastjoin-子查询带窗口特征-没有使用索引-带orderby
+    desc: 两个子查询lastjoin-子查询带窗口特征-没有使用索引-带orderby-rtidb模式不支持
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
