1. 统一管理FESQL_CASE_XXXX环境变量

--- a/src/sdk/java/fesql-auto-test-java/pom.xml
+++ b/src/sdk/java/fesql-auto-test-java/pom.xml
@@ -204,6 +204,10 @@
                 <configuration>
                     <systemProperties>
                         <property>
+                            <name>caseName</name>
+                            <value>${caseName}</value>
+                        </property>
+                        <property>
                             <name>caseEnv</name>
                             <value>${caseEnv}</value>
                         </property>
