增加多版本验证

--- a/src/sdk/java/fesql-auto-test-java/src/main/resources/fesql.properties
+++ b/src/sdk/java/fesql-auto-test-java/src/main/resources/fesql.properties
@@ -6,6 +6,8 @@ qa_zk_root_path=/fedb
 qa_tb_endpoint_0=172.27.128.37:10003
 qa_tb_endpoint_1=172.27.128.37:10004
 qa_tb_endpoint_2=172.27.128.37:10005
+qa_versions=2021-02-06
+qa_init_version_env=false
 
 #配置zk地址, 和集群启动配置中的zk_cluster保持一致
 standalone_zk_cluster=127.0.0.1:6181
