remove rdma code
Change-Id: Icb6c1f1b7ee24cb4489b0414df63b43faa42aac7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,15 +80,12 @@ option(MAC_TABLET_ENABLE "Enable Table on Mac OS" OFF)
 message (STATUS "MAC_TABLET_ENABLE: ${MAC_TABLET_ENABLE}")
 message (STATUS "PZFPGA_ENABLE: ${PZFPGA_ENABLE}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-if (NOT "$ENV{RDMA}" STREQUAL "")
-    add_compile_definitions(__rdma__=1)
-endif()
 if (MAC_TABLET_ENABLE)
     add_compile_definitions(__mac_tablet__=1)
 endif ()
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(OS_LIB ${CMAKE_THREAD_LIBS_INIT} rt)
-    set(BRPC_LIBS brpc protobuf glog gflags unwind lzma ssl crypto leveldb z snappy dl pthread ${OS_LIB})
+    set(BRPC_LIBS brpc protobuf glog gflags unwind lzma ssl crypto leveldb z snappy dl pthread bz2 zstd ${OS_LIB})
     if (PZFPGA_ENABLE) 
         link_directories(${PROJECT_SOURCE_DIR}/thirdparty/aclrte-linux64/lib)
     endif()
