Resolve #234 Transformer 重构

--- a/src/version.h.in
+++ b/src/version.h.in
@@ -1,6 +1,6 @@
 /*
  * version.h
- * Copyright 2017 elasticlog <elasticlog01@gmail.com>
+ * Copyright 2017 4paradigm
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
