添加报告日志开关

--- a/src/sdk/java/fesql-auto-test-java/pom.xml
+++ b/src/sdk/java/fesql-auto-test-java/pom.xml
@@ -236,6 +236,10 @@
                             <name>fedbVersion</name>
                             <value>${fedbVersion}</value>
                         </property>
+                        <property>
+                            <name>reportLog</name>
+                            <value>${reportLog}</value>
+                        </property>
                     </systemProperties>
                 </configuration>
             </plugin>
